UI fix for box overflow

--- a/src/less/packaging/category-multi-select.less
+++ b/src/less/packaging/category-multi-select.less
@@ -6,6 +6,8 @@
     &-category-list{
         margin-top: 16px;
         display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
         &-item{
             align-items: center;
             padding: 8px;
@@ -18,10 +20,7 @@
             width: 100px;
             display: flex;
             justify-content: space-between;
-            margin-left: 12px;
-        }
-        &-item:first-child{
-            margin: 0;
+            // margin-left: 12px;
         }
     }
 }
